# axum-demo

./: .env  Cargo.toml
migrations/: 20250812183937_setup.down.sql  20250812183937_setup.up.sql
src/: error.rs  main.rs
src/handlers/: answer.rs  inner_handlers.rs  mod.rs  question.rs  tests.rs
src/models/: answer.rs  mod.rs  question.rs
src/persistance/: answers_dao.rs  questions_dao.rs  tests.rs
