[package]
name = "axum-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
dotenvy = "0.15.7"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
